docs/1.2/_sources/api/gammapy.modeling.Parameters.rst.txt
Parameters
==========

.. currentmodule:: gammapy.modeling

.. autoclass:: Parameters
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~Parameters.free_parameters
      ~Parameters.max
      ~Parameters.min
      ~Parameters.names
      ~Parameters.norm_parameters
      ~Parameters.prior
      ~Parameters.types
      ~Parameters.unique_parameters
      ~Parameters.value

   .. rubric:: Methods Summary

   .. autosummary::

      ~Parameters.autoscale
      ~Parameters.check_limits
      ~Parameters.copy
      ~Parameters.count
      ~Parameters.freeze_all
      ~Parameters.from_dict
      ~Parameters.from_stack
      ~Parameters.index
      ~Parameters.prior_stat_sum
      ~Parameters.restore_status
      ~Parameters.select
      ~Parameters.set_parameter_factors
      ~Parameters.to_dict
      ~Parameters.to_table
      ~Parameters.unfreeze_all

   .. rubric:: Attributes Documentation

   .. autoattribute:: free_parameters
   .. autoattribute:: max
   .. autoattribute:: min
   .. autoattribute:: names
   .. autoattribute:: norm_parameters
   .. autoattribute:: prior
   .. autoattribute:: types
   .. autoattribute:: unique_parameters
   .. autoattribute:: value

   .. rubric:: Methods Documentation

   .. automethod:: autoscale
   .. automethod:: check_limits
   .. automethod:: copy
   .. automethod:: count
   .. automethod:: freeze_all
   .. automethod:: from_dict
   .. automethod:: from_stack
   .. automethod:: index
   .. automethod:: prior_stat_sum
   .. automethod:: restore_status
   .. automethod:: select
   .. automethod:: set_parameter_factors
   .. automethod:: to_dict
   .. automethod:: to_table
   .. automethod:: unfreeze_all
